--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 body {
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,10 +16,14 @@ body {
 }
 .progress-done {
   height: 100%;
-  width: 200px;
+  width: 0;
+  opacity: 0;
+  font: #fff;
   background: linear-gradient(to left, #f2709c, #ff9472);
+  box-shadow: 0 3px 3px -5px #f2709c, 0 2px 5px #f2709c;
   border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 1s ease;
 }
